tpl/default/css/articles.css
/*
 * Styles for the articles
 */

/* == article html tag */
	.Article {
		border: 1px solid #E5E5E5;
		border-radius: 2px;
		background-color: #FEFEFE;
	}

/* == article <nav>*/
	.Controls {
		text-align:center;
	}
	.Controls-button {
		padding:2px;
		margin:5px;
	}
	/*mobile-first*/
	.ArticleTagsList {
		display:none;
	}

	@media(min-width:960px)
	/*must be the same value than in the Responsive part of layout.css*/
	{
		.ArticleTagsList {
			display:block;
		}
		.Controls-button {
			width:100%;
		}
		.Controls {
			text-align:left
		}
		.TagList {
			display:inline;
		}

		/*hide the list and show the display button*/
		.DisplayTagsButton{
			display:none;
		}
		.ArticleTagsList {
			display:block;
		}
		.Article-mainForm {
			width:100%;
		}
	}

/* == article content */
	main article h1,
	main article h2,
	main article h3,
	main article h4,
	main article h5,
	main article h6 {
		margin:0;
	}

	.ArticleContent ul,
	.ArticleContent ol {
		padding-left:2em;
	}
	.ArticleContent > * {
		padding:0 2rem 1rem 2rem;
	}
	.ArticleContent img {
		max-width: 100% !important;
		height: auto !important;
	}
    .ArticleContent iframe {
        max-width: 100% !important;
    }

